#2213 Increase immutability